<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity"
    android:id="@+id/MainLayout">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:layout_centerHorizontal="true"
        android:gravity="top"
        android:orientation="vertical">

        <TextView
            android:id="@+id/fo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/suez_one"
            android:text="@string/app_in_name"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="55sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:fontFamily="@font/rubik_bold"
            android:text="@string/app_name_after"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/text_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="60dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="1"
        android:fontFamily="@font/suez_one"
        android:text="@string/text_bottom"
        android:textAlignment="center"
        android:textColor="@color/demo"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/text_bottom"
        android:layout_marginStart="12dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="15dp"
        android:orientation="vertical"
        android:gravity="center"
        android:weightSum="2">


        <Button
            android:id="@+id/btnSign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:layout_weight="1"
            android:background="@drawable/btn_sign"
            android:fontFamily="@font/rubik_bold"
            android:text="@string/btn_sign"
            android:textColor="@color/white"
            android:textSize="19dp" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginBottom="120dp"
            android:layout_weight="1"
            android:background="@drawable/btn_register"
            android:fontFamily="@font/rubik_bold"
            android:text="@string/btn_register"
            android:textColor="@color/white"
            android:textSize="19dp" />
    </LinearLayout>

</RelativeLayout>