<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment"
    android:background="@drawable/background_home">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:src="@drawable/icon_camera"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="packed"/>

    <LinearLayout
        android:id="@+id/borderedWindow"
        android:layout_width="350dp"
        android:layout_height="470dp"
        android:background="@drawable/round_border"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/imageView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_block_text"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="20sp" />


        <ImageView
            android:id="@+id/imageView"
            android:layout_marginTop="15dp"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/codeqr" />

        <TextView
            android:id="@+id/text_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/qrcode_text"
            android:textAlignment="center"
            android:fontFamily="@font/rubik_bold"
            android:textSize="17sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="или"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_marginTop="15dp"
            android:layout_width="240dp"
            android:layout_height="110dp"
            android:src="@drawable/barcode" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/barcode_text"
            android:textAlignment="center"
            android:fontFamily="@font/rubik_bold"
            android:textSize="17sp" />
    </LinearLayout>

    <Button
        android:id="@+id/addCamera"
        android:layout_width="280dp"
        android:layout_height="55dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="65dp"
        android:textSize="20dp"
        android:background="@drawable/round_border"
        android:fontFamily="@font/rubik_bold"
        android:gravity="center"
        android:text="@string/scan_camera"
        app:layout_constraintTop_toBottomOf="@id/borderedWindow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
